--- a/CPP/Tree traversal.ipynb
+++ b/CPP/Tree traversal.ipynb
@@ -101,13 +101,13 @@
      "text": [
       "\n",
       "Preorder traversal of binary tree is \n",
-      "1 2 4 5 3 \n",
+      "1 2 4 5 3 6 7 \n",
       "\n",
       "Inorder traversal of binary tree is \n",
-      "4 2 5 1 3 \n",
+      "4 2 5 1 6 3 7 \n",
       "\n",
       "Postorder traversal of binary tree is \n",
-      "4 5 2 3 1 "
+      "4 5 2 6 7 3 1 "
      ]
     }
    ],
@@ -120,6 +120,8 @@
     "tree->right       = new Node(3);\n",
     "tree->left->left  = new Node(4);\n",
     "tree->left->right = new Node(5); \n",
+    "tree->right->left = new Node(6);\n",
+    "tree->right->right = new Node(7);\n",
     " \n",
     "cout << \"\\nPreorder traversal of binary tree is \\n\";\n",
     "print_pre_order(tree);\n",
