--- a/CPP/Path between nodes in BST.ipynb
+++ b/CPP/Path between nodes in BST.ipynb
@@ -55,15 +55,86 @@
    "source": [
     "#import <vector>\n",
     "\n",
-    "struct bst {\n",
+    "using std;\n",
+    "\n",
+    "struct TNode {\n",
     "    int data;\n",
-    "    struct bst *left;\n",
-    "    struct bst *right;\n",
+    "    struct TNode *left, *right;\n",
     "}\n",
     "\n",
-    "namespace algorithms {\n",
-    "    using namespace std;\n",
+    "struct TNode* newNode(int data);\n",
+    "\n",
+    "struct TNode* unsortedArrayToBst(int arr[], int size) {\n",
     "    \n",
+    "    if (size <= 0) {\n",
+    "        return NULL;\n",
+    "    }\n",
+    "    \n",
+    "    struct TNode *root = newNode(arr[0]);\n",
+    "    \n",
+    "    for (int i = 1; i < size; i++) {\n",
+    "        insertNode(root, arr[i]);\n",
+    "    }\n",
+    "    return root;\n",
+    "}\n",
+    "\n",
+    "struct TNode* sortedArrayToBst(int arr[], int start, int end) {\n",
+    "    \n",
+    "    if (start > end) {\n",
+    "        return NULL;\n",
+    "    }\n",
+    "    \n",
+    "    /* Get middle element (in case of sorted array middle element will be root of balansed bst) */\n",
+    "    int mid = (start + end)/2;\n",
+    "    struct TNode *root = newNode(arr[mid]);\n",
+    "    \n",
+    "    /*Recurcively construct left subtree*/\n",
+    "    root->left = arrayToBst(arr, start, mid - 1);\n",
+    "    \n",
+    "    /*Recurcively construct right subtree*/\n",
+    "    root->right = arrayToBst(arr, mid + 1, end);\n",
+    "}\n",
+    "\n",
+    "void insertNode(struct TNode *node, int data) {\n",
+    "    if (node->data >= data) {\n",
+    "        if(node->left == NULL) {\n",
+    "            node->left = newNode(data);\n",
+    "            return;\n",
+    "        }\n",
+    "        insertNode(node->left, data);\n",
+    "    }\n",
+    "    if (node->right == NULL) {\n",
+    "        node->right = newNode(data);\n",
+    "        return;\n",
+    "    }\n",
+    "    insertNode(node->right, data);\n",
+    "}\n",
+    "\n",
+    "void printPreorder(struct TNode *node) {\n",
+    "    if (node == NULL) {\n",
+    "        return;\n",
+    "    }\n",
+    "    cout << node->data << \" \";\n",
+    "    printPreorder(node->left);\n",
+    "    printPreorder(node->right);\n",
+    "}\n",
+    "\n",
+    "void printArray(int arr[], int size) {\n",
+    "    for (int i = 0; i < size; i++) {\n",
+    "        cout << arr[i] << \" \";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "void preorderToArray(struct TNode *node, int arr[], int size) {\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    int arr[] = {5, 6, 3, 1, 2, 4};\n",
+    "    int size = sizeof(arr)/sizeof(arr[0]);\n",
+    "    struct TNode *root = usortedArrayToBst(arr, size);\n",
+    "    printPreorder(root);\n",
+    "    struct TNode *root1 = arrayToBst(arr, 0, size - 1);\n",
     "    \n",
     "}"
    ]
