--- a/CPP/Path between nodes in BST.ipynb
+++ b/CPP/Path between nodes in BST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,29 +40,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using raw input\n"
+     ]
+    }
+   ],
    "source": [
     ".rawInput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_8:50:1: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1mcontrol may reach end of non-void function [-Wreturn-type]\u001b[0m\n",
+      "}\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m\u001b[1minput_line_8:83:1: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1mcontrol reaches end of non-void function [-Wreturn-type]\u001b[0m\n",
+      "}\n",
+      "\u001b[0;1;32m^\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#import <vector>\n",
     "\n",
-    "using std;\n",
+    "using namespace std;\n",
     "\n",
     "struct TNode {\n",
     "    int data;\n",
     "    struct TNode *left, *right;\n",
+    "};\n",
+    "\n",
+    "struct TNode* newNode(int data) {\n",
+    "    \n",
     "}\n",
     "\n",
-    "struct TNode* newNode(int data);\n",
+    "void insertNode(struct TNode *node, int data) {\n",
+    "    if (node->data >= data) {\n",
+    "        if(node->left == NULL) {\n",
+    "            node->left = newNode(data);\n",
+    "            return;\n",
+    "        }\n",
+    "        insertNode(node->left, data);\n",
+    "    }\n",
+    "    if (node->right == NULL) {\n",
+    "        node->right = newNode(data);\n",
+    "        return;\n",
+    "    }\n",
+    "    insertNode(node->right, data);\n",
+    "}\n",
     "\n",
     "struct TNode* unsortedArrayToBst(int arr[], int size) {\n",
     "    \n",
@@ -89,25 +128,10 @@
     "    struct TNode *root = newNode(arr[mid]);\n",
     "    \n",
     "    /*Recurcively construct left subtree*/\n",
-    "    root->left = arrayToBst(arr, start, mid - 1);\n",
+    "    root->left = sortedArrayToBst(arr, start, mid - 1);\n",
     "    \n",
     "    /*Recurcively construct right subtree*/\n",
-    "    root->right = arrayToBst(arr, mid + 1, end);\n",
-    "}\n",
-    "\n",
-    "void insertNode(struct TNode *node, int data) {\n",
-    "    if (node->data >= data) {\n",
-    "        if(node->left == NULL) {\n",
-    "            node->left = newNode(data);\n",
-    "            return;\n",
-    "        }\n",
-    "        insertNode(node->left, data);\n",
-    "    }\n",
-    "    if (node->right == NULL) {\n",
-    "        node->right = newNode(data);\n",
-    "        return;\n",
-    "    }\n",
-    "    insertNode(node->right, data);\n",
+    "    root->right = sortedArrayToBst(arr, mid + 1, end);\n",
     "}\n",
     "\n",
     "void printPreorder(struct TNode *node) {\n",
@@ -125,27 +149,65 @@
     "    }\n",
     "}\n",
     "\n",
-    "void preorderToArray(struct TNode *node, int arr[], int size) {\n",
+    "void preorderToArray(struct TNode *node, int arr[], int size, int & index) {\n",
+    "    if (size <= index) {\n",
+    "        return;\n",
+    "    }\n",
     "    \n",
+    "    arr[index] = node->data;\n",
+    "    \n",
+    "    index ++;\n",
+    "    preorderToArray(node->left, arr, size, index);\n",
+    "    index ++;\n",
+    "    preorderToArray(node->right, arr, size, index);\n",
     "}\n",
     "\n",
-    "int main() {\n",
-    "    int arr[] = {5, 6, 3, 1, 2, 4};\n",
-    "    int size = sizeof(arr)/sizeof(arr[0]);\n",
-    "    struct TNode *root = usortedArrayToBst(arr, size);\n",
+    "int execute(int arr[], int size) {\n",
+    "    struct TNode *root = unsortedArrayToBst(arr, size);\n",
     "    printPreorder(root);\n",
-    "    struct TNode *root1 = arrayToBst(arr, 0, size - 1);\n",
-    "    \n",
+    "    int index = 0;\n",
+    "    preorderToArray(root, arr, size, index);\n",
+    "    root = sortedArrayToBst(arr, 0, size - 1);\n",
+    "    printPreorder(root);\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Not using raw input\n"
+     ]
+    }
+   ],
    "source": [
     ".rawInput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IncrementalExecutor::executeFunction: symbol '_Z7newNodei' unresolved while linking [cling interface function]!\n",
+      "You are probably missing the definition of newNode(int)\n",
+      "Maybe you need to load the corresponding shared library?\n"
+     ]
+    }
+   ],
+   "source": [
+    "int arr[] = {5, 6, 3, 1, 2, 4};\n",
+    "int size = sizeof(arr)/sizeof(arr[0]);\n",
+    "execute(arr, size);"
    ]
   }
  ],
