--- a/CPP/Path between nodes in BST.ipynb
+++ b/CPP/Path between nodes in BST.ipynb
@@ -59,21 +59,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_8:50:1: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1mcontrol may reach end of non-void function [-Wreturn-type]\u001b[0m\n",
-      "}\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m\u001b[1minput_line_8:83:1: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1mcontrol reaches end of non-void function [-Wreturn-type]\u001b[0m\n",
-      "}\n",
-      "\u001b[0;1;32m^\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import <vector>\n",
     "\n",
@@ -82,22 +68,23 @@
     "struct TNode {\n",
     "    int data;\n",
     "    struct TNode *left, *right;\n",
+    "    TNode(int data) {\n",
+    "        this->data = data;\n",
+    "        left = right = NULL;\n",
+    "    }\n",
     "};\n",
-    "\n",
-    "struct TNode* newNode(int data) {\n",
-    "    \n",
-    "}\n",
     "\n",
     "void insertNode(struct TNode *node, int data) {\n",
     "    if (node->data >= data) {\n",
     "        if(node->left == NULL) {\n",
-    "            node->left = newNode(data);\n",
+    "            node->left = new TNode(data);\n",
     "            return;\n",
     "        }\n",
     "        insertNode(node->left, data);\n",
+    "        return;\n",
     "    }\n",
     "    if (node->right == NULL) {\n",
-    "        node->right = newNode(data);\n",
+    "        node->right = new TNode(data);\n",
     "        return;\n",
     "    }\n",
     "    insertNode(node->right, data);\n",
@@ -109,7 +96,7 @@
     "        return NULL;\n",
     "    }\n",
     "    \n",
-    "    struct TNode *root = newNode(arr[0]);\n",
+    "    struct TNode *root = new TNode(arr[0]);\n",
     "    \n",
     "    for (int i = 1; i < size; i++) {\n",
     "        insertNode(root, arr[i]);\n",
@@ -125,13 +112,14 @@
     "    \n",
     "    /* Get middle element (in case of sorted array middle element will be root of balansed bst) */\n",
     "    int mid = (start + end)/2;\n",
-    "    struct TNode *root = newNode(arr[mid]);\n",
+    "    struct TNode *root = new TNode(arr[mid]);\n",
     "    \n",
     "    /*Recurcively construct left subtree*/\n",
     "    root->left = sortedArrayToBst(arr, start, mid - 1);\n",
     "    \n",
     "    /*Recurcively construct right subtree*/\n",
     "    root->right = sortedArrayToBst(arr, mid + 1, end);\n",
+    "    return root;\n",
     "}\n",
     "\n",
     "void printPreorder(struct TNode *node) {\n",
@@ -147,28 +135,30 @@
     "    for (int i = 0; i < size; i++) {\n",
     "        cout << arr[i] << \" \";\n",
     "    }\n",
+    "    cout << \"\\n\";\n",
     "}\n",
     "\n",
-    "void preorderToArray(struct TNode *node, int arr[], int size, int & index) {\n",
-    "    if (size <= index) {\n",
-    "        return;\n",
+    "void inorderToArray(TNode *node, int arr[], int size, int & index) {    \n",
+    "    if (node->left != NULL) {\n",
+    "        inorderToArray(node->left, arr, size, index);\n",
     "    }\n",
-    "    \n",
     "    arr[index] = node->data;\n",
-    "    \n",
-    "    index ++;\n",
-    "    preorderToArray(node->left, arr, size, index);\n",
-    "    index ++;\n",
-    "    preorderToArray(node->right, arr, size, index);\n",
+    "        index ++;\n",
+    "    if (node->right != NULL) {\n",
+    "        inorderToArray(node->right, arr, size, index);\n",
+    "    }\n",
     "}\n",
     "\n",
-    "int execute(int arr[], int size) {\n",
+    "void execute(int arr[], int size) {\n",
+    "    cout << \"test\" << \"\\n\";\n",
     "    struct TNode *root = unsortedArrayToBst(arr, size);\n",
     "    printPreorder(root);\n",
+    "    cout << \"\\n\";\n",
     "    int index = 0;\n",
-    "    preorderToArray(root, arr, size, index);\n",
-    "    root = sortedArrayToBst(arr, 0, size - 1);\n",
-    "    printPreorder(root);\n",
+    "    inorderToArray(root, arr, size, index);\n",
+    "    printArray(arr, size);\n",
+    "    //root = sortedArrayToBst(arr, 0, size - 1);\n",
+    "    //printPreorder(root);\n",
     "}"
    ]
   },
@@ -195,12 +185,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IncrementalExecutor::executeFunction: symbol '_Z7newNodei' unresolved while linking [cling interface function]!\n",
-      "You are probably missing the definition of newNode(int)\n",
-      "Maybe you need to load the corresponding shared library?\n"
+      "test\n",
+      "5 3 1 2 4 6 \n",
+      "1 2 3 4 5 6 \n"
      ]
     }
    ],
