--- a/CPP/Path between nodes in BST.ipynb
+++ b/CPP/Path between nodes in BST.ipynb
@@ -61,8 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import <vector>\n",
-    "\n",
     "using namespace std;\n",
     "\n",
     "struct TNode {\n",
@@ -92,12 +90,9 @@
     "\n",
     "struct TNode* unsortedArrayToBst(int arr[], int size) {\n",
     "    \n",
-    "    if (size <= 0) {\n",
+    "    if (size <= 0)\n",
     "        return NULL;\n",
-    "    }\n",
-    "    \n",
     "    struct TNode *root = new TNode(arr[0]);\n",
-    "    \n",
     "    for (int i = 1; i < size; i++) {\n",
     "        insertNode(root, arr[i]);\n",
     "    }\n",
@@ -131,11 +126,17 @@
     "    printPreorder(node->right);\n",
     "}\n",
     "\n",
+    "void printPreorderTree(struct TNode * node) {\n",
+    "    cout << \"Preorder treee\\n\";\n",
+    "    printPreorder(node);\n",
+    "    cout << \"\\n\\n\";\n",
+    "}\n",
+    "\n",
     "void printArray(int arr[], int size) {\n",
     "    for (int i = 0; i < size; i++) {\n",
     "        cout << arr[i] << \" \";\n",
     "    }\n",
-    "    cout << \"\\n\";\n",
+    "    cout << \"\\n\\n\";\n",
     "}\n",
     "\n",
     "void inorderToArray(TNode *node, int arr[], int size, int & index) {    \n",
@@ -149,16 +150,58 @@
     "    }\n",
     "}\n",
     "\n",
-    "void execute(int arr[], int size) {\n",
-    "    cout << \"test\" << \"\\n\";\n",
+    "void path_length(TNode *node, int data, int & path) {\n",
+    "    if (node == NULL) {\n",
+    "        path = -1;     \n",
+    "    }\n",
+    "    else if (node->data > data) {        \n",
+    "        path ++;\n",
+    "        path_length(node->left, data, path);\n",
+    "    }\n",
+    "    else if (node->data < data) {        \n",
+    "        path ++;\n",
+    "        path_length(node->right, data, path);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "int node_distance(TNode * node, int data1, int data2) {    \n",
+    "    if (node == NULL)\n",
+    "        return -1;\n",
+    "    if (node->data < data1 && node->data < data2) {        \n",
+    "        return node_distance(node->right, data1, data2);\n",
+    "        \n",
+    "    }\n",
+    "    else if(node->data > data1 && node->data > data2) {        \n",
+    "        return node_distance(node->left, data1, data2);\n",
+    "    }    \n",
+    "    int path1, path2;\n",
+    "    path1 = path2 = 0;\n",
+    "    path_length(node, data1, path1);\n",
+    "    path_length(node, data2, path2);\n",
+    "    if (path1 > 0 && path2 > 0)\n",
+    "        return path1 + path2;\n",
+    "    return -1;\n",
+    "}\n",
+    "\n",
+    "void execute(int arr[], int size, int node1, int node2) {\n",
+    "    // 1. Construct BST from unsorted array\n",
     "    struct TNode *root = unsortedArrayToBst(arr, size);\n",
-    "    printPreorder(root);\n",
-    "    cout << \"\\n\";\n",
+    "    printPreorderTree(root);    \n",
+    "    int distance = node_distance(root, node1, node2);\n",
+    "    cout << \"Before Rebalancing. The distance between node \" \n",
+    "        << node1 << \" and node \" \n",
+    "        << node2 << \" is \" << distance << \"\\n\\n\";\n",
     "    int index = 0;\n",
+    "    // 2. Convert BST to array by using inorder traversal\n",
+    "    //    Inorder traversal will produced sorted array\n",
     "    inorderToArray(root, arr, size, index);\n",
     "    printArray(arr, size);\n",
-    "    //root = sortedArrayToBst(arr, 0, size - 1);\n",
-    "    //printPreorder(root);\n",
+    "    // 3. Make balanced BST from sorted array\n",
+    "    root = sortedArrayToBst(arr, 0, size - 1);\n",
+    "    printPreorderTree(root);    \n",
+    "    distance = node_distance(root, node1, node2);\n",
+    "    cout << \"After Rebalancing. The distance between node \" \n",
+    "        << node1 << \" and node \" << node2 << \" is \" << distance;\n",
     "}"
    ]
   },
@@ -188,16 +231,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n",
+      "Preorder treee\n",
       "5 3 1 2 4 6 \n",
-      "1 2 3 4 5 6 \n"
+      "\n",
+      "Before Rebalancing. The distance between node 2 and node 4 is 3\n",
+      "\n",
+      "1 2 3 4 5 6 \n",
+      "\n",
+      "Preorder treee\n",
+      "3 1 2 5 4 6 \n",
+      "\n",
+      "After Rebalancing. The distance between node 2 and node 4 is 4"
      ]
     }
    ],
    "source": [
     "int arr[] = {5, 6, 3, 1, 2, 4};\n",
     "int size = sizeof(arr)/sizeof(arr[0]);\n",
-    "execute(arr, size);"
+    "execute(arr, size, 2, 4);"
    ]
   }
  ],
