--- a/CPP/The game - substrings of size K with K distinct characters.ipynb
+++ b/CPP/The game - substrings of size K with K distinct characters.ipynb
@@ -34,7 +34,6 @@
     "\n",
     "Output:\n",
     "{wagl, aglk, glkn, lkna, knag, gawu, awun, wuna, unag, nagw, agwk, kwag}\n",
-    "\n",
     "Explanation:\n",
     "Substrings in order are: wagl, aglk, glkn, lkna, knag, gawu, awun, wuna, unag, nagw, agwk, kwag, wagl\n",
     "\"wagl\" is represented twice, but is included in the output once.\n",
@@ -65,54 +64,40 @@
    "outputs": [],
    "source": [
     "#import <unordered_set>\n",
+    "#import <vector>\n",
     "\n",
     "using namespace std;\n",
     "\n",
-    "void printArray(string arr[], int size) {\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        cout << arr[i] << \" \";\n",
-    "    }\n",
+    "void printArray(vector<string> *arr) {\n",
+    "    cout << \"words set size \" << arr->size() << \"\\n\";\n",
+    "    for (auto i = arr->begin(); i != arr->end(); i++)\n",
+    "        cout << *i << \" \";\n",
     "    cout << \"\\n\\n\";\n",
     "}\n",
     "\n",
-    "void execute(string inputString, int wordLength) {\n",
+    "template<typename T>\n",
+    "bool isUnique(T value, unordered_set<T> * set) {\n",
+    "    auto rslt = set->insert(value);\n",
+    "    return rslt.second;\n",
+    "}\n",
+    "\n",
+    "bool isDistinctChars(string word) {\n",
     "    unordered_set<char> charsSet;\n",
-    "    unordered_set<string> wordsSet;\n",
-    "    int i = 0;\n",
-    "    int j = 0;\n",
-    "    while (i < inputString.size()) {\n",
-    "        j = i + wordLength - 1;        \n",
-    "        while (charsSet.size() < wordLength){            \n",
-    "            auto charSetRslt = charsSet.insert(inputString[j]);\n",
-    "            \n",
-    "            cout << i << \" \" << j << \" \" << charSetRslt.second << \" \" <<\"\\n\";            \n",
-    "            if (!charSetRslt.second) {\n",
-    "                i = j + 1;\n",
-    "                j = -1;\n",
-    "                break;\n",
-    "            }\n",
-    "            j--;\n",
-    "        }\n",
-    "        \n",
-    "        if (j > 0) {\n",
-    "            charsSet.erase(inputString[i]);\n",
-    "            cout << i << \" \" << inputString.substr(i, wordLength) << \"\\n\";\n",
-    "            wordsSet.insert(inputString.substr(i, wordLength));\n",
-    "            i++;\n",
-    "        }        \n",
+    "    for (int i = 0; i < word.size(); i++)\n",
+    "        if (!isUnique(word[i], &charsSet))\n",
+    "            return false;\n",
+    "    return true;\n",
+    "}\n",
+    "\n",
+    "void execute(string inputString, int wordLength) {\n",
+    "    unordered_set<string> wordSet;\n",
+    "    vector<string> rslt;\n",
+    "    for (int i = 0; i < (inputString.size() - wordLength); i++) {\n",
+    "        string word = inputString.substr(i, wordLength);\n",
+    "        if (isDistinctChars(word))\n",
+    "            rslt.push_back(word);\n",
     "    }\n",
-    "    int arraySize = wordsSet.size();\n",
-    "    string rslt[arraySize];\n",
-    "    j = 0;\n",
-    "    \n",
-    "    cout << \"words set size \" << wordsSet.size() << \"\\n\";\n",
-    "    \n",
-    "    for (auto it = wordsSet.begin(); it != wordsSet.end(); it++) {\n",
-    "        rslt[j] = *it;\n",
-    "        cout << *it << \"\\n\";\n",
-    "    }\n",
-    "    \n",
-    "    printArray(rslt, arraySize);\n",
+    "    printArray(&rslt);\n",
     "}"
    ]
   },
@@ -142,38 +127,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 3 1 \n",
-      "0 2 1 \n",
-      "0 1 1 \n",
-      "0 0 0 \n",
-      "1 4 1 \n",
-      "1 wagl\n",
-      "2 5 1 \n",
-      "2 aglk\n",
-      "3 6 1 \n",
-      "3 glkn\n",
-      "4 7 1 \n",
-      "4 lkna\n",
-      "5 8 1 \n",
-      "5 knag\n",
-      "6 9 0 \n",
-      "10 13 0 \n",
-      "14 17 1 \n",
-      "14 gwkw\n",
-      "15 18 0 \n",
-      "19 22 1 \n",
-      "19 gl\n",
-      "20 l\n",
-      "words set size 8\n",
-      "gl\n",
-      "knag\n",
-      "l\n",
-      "lkna\n",
-      "aglk\n",
-      "gwkw\n",
-      "glkn\n",
-      "wagl\n",
-      "wagl        \n",
+      "words set size 12\n",
+      "wagl aglk glkn lkna knag gawu awun wuna unag nagw agwk kwag \n",
       "\n"
      ]
     }
