--- a/CPP/Directed graph traversals.ipynb
+++ b/CPP/Directed graph traversals.ipynb
@@ -21,32 +21,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_8:18:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'v'\u001b[0m\n",
-      "    int v = v;\n",
-      "\u001b[0;1;32m        ^\n",
-      "\u001b[0m\u001b[1minput_line_8:16:18: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
-      "Graph::Graph(int v)\n",
-      "\u001b[0;1;32m                 ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <list>\n",
-    "#include <iostream>\n",
     "\n",
     "using namespace std;\n",
     "\n",
@@ -102,18 +79,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Not using raw input\n"
+     ]
+    }
+   ],
    "source": [
     ".rawInput"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deep First Traversal starting from node 2\n",
+      "2 0 1 3 "
+     ]
+    }
+   ],
    "source": [
     "Graph g(4);\n",
     "g.addEdge(0, 1);\n",
