--- a/CPP/The game - substrings of size K with K distinct characters.ipynb
+++ b/CPP/The game - substrings of size K with K distinct characters.ipynb
@@ -72,29 +72,27 @@
     "    cout << \"words set size \" << arr->size() << \"\\n\";\n",
     "    for (auto i = arr->begin(); i != arr->end(); i++)\n",
     "        cout << *i << \" \";\n",
-    "    cout << \"\\n\\n\";\n",
     "}\n",
     "\n",
     "template<typename T>\n",
     "bool isUnique(T value, unordered_set<T> * set) {\n",
-    "    auto rslt = set->insert(value);\n",
-    "    return rslt.second;\n",
+    "    return (set->insert(value)).second;\n",
     "}\n",
     "\n",
-    "bool isDistinctChars(string word) {\n",
+    "bool isDistinctAndUnique(string word, unordered_set<string> * set) {\n",
     "    unordered_set<char> charsSet;\n",
     "    for (int i = 0; i < word.size(); i++)\n",
     "        if (!isUnique(word[i], &charsSet))\n",
     "            return false;\n",
-    "    return true;\n",
+    "    return isUnique(word, set);\n",
     "}\n",
     "\n",
     "void execute(string inputString, int wordLength) {\n",
-    "    unordered_set<string> wordSet;\n",
+    "    unordered_set<string> wordsSet;\n",
     "    vector<string> rslt;\n",
     "    for (int i = 0; i < (inputString.size() - wordLength); i++) {\n",
     "        string word = inputString.substr(i, wordLength);\n",
-    "        if (isDistinctChars(word))\n",
+    "        if (isDistinctAndUnique(word, &wordsSet) )\n",
     "            rslt.push_back(word);\n",
     "    }\n",
     "    printArray(&rslt);\n",
@@ -128,8 +126,7 @@
      "output_type": "stream",
      "text": [
       "words set size 12\n",
-      "wagl aglk glkn lkna knag gawu awun wuna unag nagw agwk kwag \n",
-      "\n"
+      "wagl aglk glkn lkna knag gawu awun wuna unag nagw agwk kwag "
      ]
     }
    ],
@@ -140,6 +137,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "C++17",
    "language": "C++17",
