--- a/CPP/Json pretty print.ipynb
+++ b/CPP/Json pretty print.ipynb
@@ -34,15 +34,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <unordered_map>\n",
     "using namespace std;\n",
     "using namespace nlohmann;\n",
     "\n",
     "namespace algorithm {\n",
-    "  \n",
+    "    \n",
+    "    struct Meta {\n",
+    "        int column;\n",
+    "        string header;\n",
+    "        \n",
+    "        Meta (int column, string header) {\n",
+    "            this->column = column;\n",
+    "            this->header = fmt::sprintf(\"  %s  \", header);\n",
+    "        }\n",
+    "        \n",
+    "        int width() {\n",
+    "            return size(this->header);\n",
+    "        }\n",
+    "    };\n",
+    "    \n",
+    "    using MetaMap = unordered_map<string, Meta>;\n",
+    "    using RowMap = unorderd_map<int, string>;\n",
+    "    using ValueMap = vector<RowMap>;\n",
+    "    \n",
+    "    void get_column_meta(MetaMap * m_map, string key, string value, int &last_col) {\n",
+    "        auto search = m_map.find(key);\n",
+    "        if (search != m_map.end()) {\n",
+    "            return search->second;\n",
+    "        }\n",
+    "        last_col++;\n",
+    "        Meta meta = new Meta(last_col, keys);\n",
+    "        m_map.insert({key, meta});\n",
+    "        return meta;\n",
+    "    }\n",
+    "\n",
+    "    void to_row(MetaMap m_map, ValueMap m_map, auto row, int &last_col) {\n",
+    "        for(json::iterator it = row.begin(); it != row.end(); it++) {\n",
+    "            \n",
+    "        }\n",
+    "    }\n",
+    "    \n",
     "    void print_json(string str) {\n",
+    "      MetaMap meta_map = {};\n",
+    "      ValueMap value_map = {};\n",
     "      auto j = json::parse(str);\n",
     "      for(json::iterator it = j.begin(); it != j.end(); ++it) {\n",
-    "          std::cout << *it << \"\\n\";\n",
+    "          auto row = it.value();\n",
+    "          for(json::iterator it1 = row.begin(); it1 != row.end(); ++it1) {\n",
+    "              std::cout << it1.value() << \"\\n\";\n",
+    "          }\n",
     "      }\n",
     "  }  \n",
     "}\n"
@@ -75,7 +116,9 @@
      "output_type": "stream",
      "text": [
       "true\n",
-      "3.141\n"
+      "3.141\n",
+      "3\n",
+      "false\n"
      ]
     }
    ],
@@ -83,7 +126,7 @@
     "using namespace std;\n",
     "using namespace algorithm;\n",
     "\n",
-    "string str = \"{ \\\"happy\\\": true, \\\"pi\\\": 3.141 }\";\n",
+    "string str = \"[{ \\\"happy\\\": true, \\\"pi\\\": 3.141 }, { \\\"pi\\\": 3 }, { \\\"happy\\\": false }]\";\n",
     "\n",
     "print_json(str);"
    ]
