--- a/CPP/Json pretty print.ipynb
+++ b/CPP/Json pretty print.ipynb
@@ -69,15 +69,16 @@
     "        return meta;\n",
     "    }\n",
     "\n",
-    "    void to_row(MetaMap m_map, ValueMap m_map, auto row, int &last_col) {\n",
+    "    void to_row(MetaMap * m_map, ValueMap * m_map, auto row, int &last_col) {\n",
     "        for(json::iterator it = row.begin(); it != row.end(); it++) {\n",
+    "            auto meta = get_column_meta(m_map, it.key(), it.value(), last_col);\n",
     "            \n",
     "        }\n",
     "    }\n",
     "    \n",
     "    void print_json(string str) {\n",
     "      MetaMap meta_map = {};\n",
-    "      ValueMap value_map = {};\n",
+    "      ValueMap value_map;\n",
     "      auto j = json::parse(str);\n",
     "      for(json::iterator it = j.begin(); it != j.end(); ++it) {\n",
     "          auto row = it.value();\n",
