--- a/CPP/Json pretty print.ipynb
+++ b/CPP/Json pretty print.ipynb
@@ -55,25 +55,30 @@
     "    };\n",
     "    \n",
     "    using MetaMap = unordered_map<string, Meta>;\n",
-    "    using RowMap = unorderd_map<int, string>;\n",
-    "    using ValueMap = vector<RowMap>;\n",
+    "    using ValueMap = vector<vector<string>>;\n",
     "    \n",
-    "    void get_column_meta(MetaMap * m_map, string key, string value, int &last_col) {\n",
+    "    void get_column_meta(MetaMap * m_map, ValueMap * v_map, string key, int &last_col) {\n",
     "        auto search = m_map.find(key);\n",
     "        if (search != m_map.end()) {\n",
     "            return search->second;\n",
     "        }\n",
     "        last_col++;\n",
-    "        Meta meta = new Meta(last_col, keys);\n",
+    "        Meta meta = new Meta(last_col, keys);        \n",
     "        m_map.insert({key, meta});\n",
+    "        v_map[0][last_col] = key;\n",
     "        return meta;\n",
     "    }\n",
     "\n",
-    "    void to_row(MetaMap * m_map, ValueMap * m_map, auto row, int &last_col) {\n",
+    "    void to_row(MetaMap * m_map, ValueMap * v_map, auto row, int &last_col, int &row_index) {\n",
     "        for(json::iterator it = row.begin(); it != row.end(); it++) {\n",
-    "            auto meta = get_column_meta(m_map, it.key(), it.value(), last_col);\n",
-    "            \n",
+    "            auto meta = get_column_meta(m_map, v_map, it.key(), last_col);\n",
+    "            v_map[row_index][meta.column] = it.value();\n",
     "        }\n",
+    "        row_index++;\n",
+    "    }\n",
+    "    \n",
+    "    void print_table(MetaMap * m_map, ValueMap * v_map, int col, int row) {\n",
+    "        \n",
     "    }\n",
     "    \n",
     "    void print_json(string str) {\n",
